<resources>
    <string name="any">Any</string>
    <string name="app_name">Quizizz</string>
    <string name="appearance">Appearance</string>
    <string name="appearance_dark">Dark</string>
    <string name="appearance_light">Light</string>
    <string name="appearance_system">System</string>
    <string name="are_ready_for_mock_test">Ready for a Test?</string>
    <string name="back">Back</string>
    <string name="category">Category</string>
    <string name="close">Close</string>
    <string name="congratulations">Congratulations!!</string>
    <string name="correct">Correct</string>
    <string name="developer_email">technovimalin@gmail.com</string>
    <string name="dialog_error_invalid_range">Please enter a number between 1 and 100 *</string>
    <string name="dialog_twenty_five">25</string>
    <string name="easy">Easy</string>
    <string name="empty_string" />
    <string name="feedback_subject">Feedback for Quizizz App!</string>
    <string name="hard">Hard</string>
    <string name="home">Home</string>
    <string name="invite_app">Invite</string>
    <string name="loading">Loading…</string>
    <string name="medium">Medium</string>
    <string name="mock_test">Mock Test</string>
    <string name="nav_delete">Delete</string>
    <string name="no_data_available">No Data Found!</string>
    <string name="number_of_questions">Enter number of questions</string>
    <string name="percent">Percent</string>
    <string name="play_to_learn">Play to learn</string>
    <string name="question">Questions</string>
    <string name="question_total">Question 13/50</string>
    <string name="quiz_answer">Answer</string>
    <string name="quiz_category">Quiz Category</string>
    <string name="quiz_check_answer_key">Answer Key:</string>
    <string name="quiz_correct_answer">Correct Ans:</string>
    <string name="quiz_dialog_cancel">Cancel</string>
    <string name="quiz_dialog_delete_subtitle">Are you sure you want to delete all scores?</string>
    <string name="quiz_dialog_delete_title">Delete All Scores</string>
    <string name="quiz_dialog_exit_title">Are you sure you want to exit?</string>
    <string name="quiz_dialog_ok">OK</string>
    <string name="quiz_live_test">Live Test</string>
    <string name="quiz_result_challenge">You have completed challenge in</string>
    <string name="quiz_score_empty">No Score found</string>
    <string name="quiz_text_a" translatable="false">A:</string>
    <string name="quiz_text_b" translatable="false">B:</string>
    <string name="quiz_text_c" translatable="false">C:</string>
    <string name="quiz_text_d" translatable="false">D:</string>
    <string name="quiz_thirty">30</string>
    <string name="quiz_use_hint">Use Hint</string>
    <string name="quiz_wrong">Wrong</string>
    <string name="quiz_your_answer">Your Ans:</string>
    <string name="quizizz">Quizizz</string>
    <string name="result_fail">Better luck next time!</string>
    <string name="result_win">Congrats!</string>
    <string name="retry">Retry!</string>
    <string name="score">Score</string>
    <string name="score_format">Score: %d%%</string>
    <string name="select_difficulty">Select difficulty</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="setting_about_us">About</string>
    <string name="setting_custom">Custom</string>
    <string name="setting_dark_night">Dark Mode</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_privacy_policy">Privacy policy</string>
     <string name="setting_rate_us">Rate us</string>
    <string name="setting_reminder">Reminder</string>
    <string name="setting_reminder_des">Reminders for reading start and end</string>
    <string name="setting_share_app">Share app</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_app_message">Hi, I\'m using Quizizz app for learning &amp; All Language Translator.\nIt\'s super easy to learn new phrases, test your skills with quizzes, and translate on the go.  ✅  Download it now: https://play.google.com/store/apps/details?id=</string>
    <string name="share_app_title">Share App</string>
    <string name="share_invite_app_message">Share this app with your friends and family. They\'ll love it!</string>
    <string name="share_invite_app_title">Share the app!</string>
    <string name="skip_question">Skip Question</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="studying_time">Studying Time</string>
    <string name="text_100_day_left">100 Days Left</string>
    <string name="text_7000">7630+</string>
    <string name="text_0_0">0.0%</string>
    <string name="time_00_23">Time: 00:25</string>
    <string name="time_one_hr">60 min</string>
    <string name="title_home">Home</string>
    <string name="today_lessons">Today Lessons</string>
    <string name="total_question">Total Question</string>
    <string name="version_name">Version: 0.0.1</string>
    <string name="welcome">Welcome!</string>
    <string name="zero">0</string>
</resources>
