<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.vimal.quiz.fragment.FragmentHome"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_score"
        android:name="com.vimal.quiz.fragment.FragmentScore"
        android:label="@string/score"
        tools:layout="@layout/fragment_recyclerview" />


    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.vimal.quiz.fragment.FragmentSettings"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>