<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_background_dialog">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_26"
        android:layout_marginEnd="@dimen/dp_30"
        android:fontFamily="@font/font_medium"
        android:gravity="center"
        android:text="@string/quiz_dialog_exit_title"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/sp_17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0.0dip"
        android:layout_height="@dimen/dp_44"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_35"
        android:layout_marginEnd="@dimen/dp_5"
        android:background="@drawable/shape_button_inactive"
        android:fontFamily="@font/font_medium"
        android:gravity="center"
        android:text="@string/quiz_dialog_cancel"
        android:textColor="@color/color_button_active"
        android:textSize="@dimen/sp_17"
        app:layout_constraintEnd_toStartOf="@id/tv_go"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_go"
        android:layout_width="0.0dip"
        android:layout_height="@dimen/dp_44"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:background="@drawable/shape_button_active"
        android:fontFamily="@font/font_medium"
        android:gravity="center"
        android:text="@string/quiz_dialog_ok"
        android:textColor="@color/color_title"
        android:textSize="@dimen/sp_17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_cancel"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_go" />

</androidx.constraintlayout.widget.ConstraintLayout>
