<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_background_dialog"
    android:backgroundTint="@color/color_surface">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/oval_ripple_black"
        android:contentDescription="@string/close"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_oval_close_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tv_title"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_26"
        android:contentDescription="@string/quiz_use_hint"
        android:src="@drawable/ic_quiz_hint_medium"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/color_orange" />


    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"

        android:background="@drawable/shape_background_dialog"
        android:fontFamily="@font/font_regular"
        android:letterSpacing="0.02"
        android:lineSpacingExtra="1sp"
        android:padding="@dimen/dp_16"
        android:scrollbars="vertical"
        android:text="@string/quiz_dialog_delete_subtitle"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/sp_17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />


    <FrameLayout
        android:id="@+id/ad_template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />


    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_template" />

</androidx.constraintlayout.widget.ConstraintLayout>
