<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ad_banner"
        android:layout_alignParentTop="true"
        android:fitsSystemWindows="true">


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/color_background"
                app:navigationIcon="@drawable/ic_back_home">


                <TextView
                    android:id="@+id/tv_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/quiz_live_test"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/sp_20" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayouts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_8">

                <include
                    android:id="@+id/ic_include"
                    layout="@layout/layout_quiz"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>


        <RelativeLayout
            android:id="@+id/quiz_rl_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_background"
            android:fitsSystemWindows="true"
            android:visibility="gone">

            <ImageView
                android:id="@+id/quiz_iv_back"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/oval_ripple_black"
                android:contentDescription="@string/back"
                android:padding="@dimen/dp_18"
                android:src="@drawable/ic_back_home" />

            <ProgressBar
                android:id="@+id/quiz_pb_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/quiz_ll_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_background"
            android:fitsSystemWindows="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">


            <ImageView
                android:id="@+id/iv_quiz_error"
                android:layout_width="@dimen/dp_120"
                android:layout_height="@dimen/dp_120"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_no_network" />

            <TextView
                android:id="@+id/quiz_tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:fontFamily="@font/font_regular"
                android:text="@string/no_data_available"
                android:textColor="@color/text_third"
                android:textSize="@dimen/sp_14" />


            <Button
                android:id="@+id/bt_quiz_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/retry" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <FrameLayout
        android:id="@+id/ad_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>