<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/dp_12"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/iv_color"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:alpha="0.8"
                android:background="@color/quiz_btn_color_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/iv_question"
                    android:layout_width="@dimen/dp_16"
                    android:layout_height="@dimen/dp_16"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_selected_white_blue_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_question"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:fontFamily="@font/font_medium"
                    android:padding="@dimen/dp_5"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintEnd_toStartOf="@+id/iv_question"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tv_answer_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_medium"
                    android:padding="@dimen/dp_5"
                    android:text="@string/quiz_your_answer"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintBottom_toTopOf="@+id/tv_use_answer_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_question" />


                <TextView
                    android:id="@+id/tv_answer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_regular"
                    android:padding="@dimen/dp_5"
                    android:text="@string/percent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintBottom_toTopOf="@+id/tv_use_answer_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_answer_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_question" />


                <TextView
                    android:id="@+id/tv_use_answer_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_medium"
                    android:padding="@dimen/dp_5"
                    android:text="@string/quiz_correct_answer"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_use_answer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_regular"
                    android:padding="@dimen/dp_5"
                    android:text="@string/total_question"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_use_answer_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</FrameLayout>